20051006:
- added support for sendfile
  (AFAIK only the Solaris version supports sending from buffers)
- added memory locking support
- added support to set buffer size as percentage of physical memory
- open file with O_LARGEFILE per default
- added some command-line options for existing functionality
  (-H, -V)
- compile as 64bit executable on opteron and sparc architectures by
  default
- defaulting to /var/tmp for buffer files, as /tmp is a swap based 
  filesystem on some operating systems
- use TMPDIR environment variable if available to determine where
  to put a buffer file

20051003:
- increased maximum value of number of blocks
- doku updates
- openssl build fixes
- fixed some warnings
- install man page to correct location
- reuse networking sockets
- do not bail out if output does not support syncing
  (thank you to Wolfgang Denk for some suggestions)

20050730:
- made mbuffer.c lint clean
- fixed some types
- Makefile fix for install

20050726:
- added support for openssl based md5 hashing
- support of transfer summary in gigabyte
- support for passing buffer size in gigabyte (G)
  (please pass the relevant CFLAGS for 64Bit executables for
   your compiler to configure)
- added support for passing command to autoloader 
  (patch submitted by Wolfgang Denk)
- enhanced network parameter parsing
- FIX: transient error in status display
- FIX: mbuffer could hang on first SIGINT (chance 1/3)
- fixed a bug in network client verification code
- pass CFLAGS also to link phase
- unlink tmpfile as early as possible
- check close for errors
  (see Chris Gerhard's Weblog concerning close on
  http://blogs.sun.com/roller/page/chrisg?anchor=did_that_close_succeed)
- additional sanity checks for buffer limits

20050510:
- fixed possible lockup upon SIGINT
- fixed displayed time
- updated display to change to MB instead of kB when > 3072kB

20050321:
- compile time fix for gentoo and suse 9.2
- made --enable-debug and --enable-md5 work